--- a/Kruta/index.html
+++ b/Kruta/index.html
@@ -144,6 +144,7 @@
 			<div class="row">
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-3 col-xs-12' >
 					<div class="Menu__MineMenu__items__title">Суп на курином бульоне</div>
+					<div class="img"><img src="img/syp.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Куриный бульон</li>
 						<li>лук</li>
@@ -161,7 +162,7 @@
 
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-3 col-xs-12'> 
 					<div class="Menu__MineMenu__items__title">Салат «Витаминный»</div>
-					<div class="img"><img src="img/girl.png" alt=""></div>
+					<div class="img"><img src="img/Vitamin.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Капуста свежая </li>
 						<li>морковь</li>
@@ -179,6 +180,7 @@
 
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-3 col-xs-12' > 
 					<div class="Menu__MineMenu__items__title">Салат «Крабовый»</div>
+					<div class="img"><img src="img/krab.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Крабовые палочки</li>
 						<li>лук</li>
@@ -201,6 +203,7 @@
 			<div class="row">
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-3 col-xs-12' > 
 					<div class="Menu__MineMenu__items__title">Греча рассыпчатая</div>
+					<div class="img"><img src="img/grecha.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Греча</li>
 						<li>вода</li>
@@ -216,6 +219,7 @@
 
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-3 col-xs-12'> 
 					<div class="Menu__MineMenu__items__title">Капуста цветная запеченая</div>
+					<div class="img"><img src="img/cvetlapysta.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Капуста</li>
 						<li>масло</li>
@@ -231,6 +235,7 @@
 
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-3 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Куриное филе в сливочном соусе</div>
+					<div class="img"><img src="img/fule.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Куриное филе</li>
 						<li>масло сливочное</li>
@@ -251,6 +256,7 @@
 			<div class="row">
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-3 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">«Шницель» натуральный, рубленный</div>
+					<div class="img"><img src="img/shnicel.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Свинина</li>
 						<li>лук</li>
@@ -269,6 +275,7 @@
 
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-3 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Помидоры фаршированные</div>
+					<div class="img"><img src="img/farsh.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Помидоры</li>
 						<li>фарш(лук,морковь,
@@ -286,6 +293,7 @@
 
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-3 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Багет пшеничный, ржаной</div>
+					<div class="img"><img src="img/hleb.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Мука(пшеничная)
 						или ржаная)</li>
@@ -307,6 +315,7 @@
 			<div class="row">
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-3 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Напиток из свежезамороженных ягод, сухофруктов</div>
+					<div class="img"><img src="img/kampot.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>ягоды или сухофрукт</li>
 						<li>вода</li>
@@ -330,6 +339,7 @@
 			<div class="row">
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12' >
 					<div class="Menu__MineMenu__items__title">Суп-пюре из цветной капусты</div>
+					<div class="img"><img src="img/pyre.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Овощьной бульён</li>
 						<li>цветная капуста</li>
@@ -348,6 +358,7 @@
 
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12' >
 					<div class="Menu__MineMenu__items__title">Салат «Весенний»</div>
+					<div class="img"><img src="img/Vitamin.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Капуста молодая</li>
 						<li>огурци</li>
@@ -365,6 +376,7 @@
 
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12' >
 					<div class="Menu__MineMenu__items__title">Салат «Столичный»</div>
+					<div class="img"><img src="img/stolich.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Филе курсиное</li>
 						<li>лук</li>
@@ -387,6 +399,7 @@
 			<div class="row">
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12' >
 					<div class="Menu__MineMenu__items__title">Рис  рассыпчатый</div>
+					<div class="img"><img src="img/ris.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>рис</li>
 						<li>вода</li>
@@ -403,6 +416,7 @@
 
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12' >
 					<div class="Menu__MineMenu__items__title">Фасоль стручковая на пару</div>
+					<div class="img"><img src="img/fasol.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>фасоль</li>
 						<li>масло сливочное</li>
@@ -418,6 +432,7 @@
 
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12' >
 					<div class="Menu__MineMenu__items__title">«Биточки» куриные</div>
+					<div class="img"><img src="img/bitachki.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Куриное филе</li>
 						<li>лук</li>
@@ -437,6 +452,7 @@
 			<div class="row">
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12' >
 					<div class="Menu__MineMenu__items__title">«Гуляш» из свинины</div>
+					<div class="img"><img src="img/gulyash.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>свинина</li>
 						<li>лук</li>
@@ -455,6 +471,7 @@
 
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12' >
 					<div class="Menu__MineMenu__items__title">Картофель запечённый с грибами и луком</div>
+					<div class="img"><img src="img/kartoshka.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Картофель</li>
 						<li>Шампиньоны</li>
@@ -472,6 +489,7 @@
 
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Багет пшеничный, ржаной</div>
+					<div class="img"><img src="img/hleb.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Мука(пшеничная)
 						или ржаная)</li>
@@ -493,6 +511,7 @@
 			<div class="row">
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Напиток из свежезамороженных ягод, сухофруктов</div>
+					<div class="img"><img src="img/kampot.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>ягоды или сухофрукт</li>
 						<li>вода</li>
@@ -514,6 +533,7 @@
 			<div class="row">
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Суп «Щи» из свежей капусты</div>
+					<div class="img"><img src="img/Shi.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>куриный бульйон</li>
 						<li>капуста</li>
@@ -532,6 +552,7 @@
 
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Салат «Овощное ассорти»</div>
+					<div class="img"><img src="img/ovoshSal.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>огурци</li>
 						<li>помидоры</li>
@@ -549,6 +570,7 @@
 
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Салат из свеклы с сыром</div>
+					<div class="img"><img src="img/Svekla.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>свекла</li>
 						<li>сыр</li>
@@ -568,6 +590,7 @@
 			<div class="row">
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">«Спагетти»</div>
+					<div class="img"><img src="img/Spagetti.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>спагетти</li>
 						<li>вода</li>
@@ -584,6 +607,7 @@
 
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Овощное рагу</div>
+					<div class="img"><img src="img/ragy.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>фасоль</li>
 						<li>капуста цветная</li>
@@ -603,6 +627,7 @@
 
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Филе индейки с грибами в сливочном соусе</div>
+					<div class="img"><img src="img/indeyka.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>филе индейки</li>
 						<li>лук</li>
@@ -623,6 +648,7 @@
 			<div class="row">
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Жаркое по-домашнему</div>
+					<div class="img"><img src="img/jarkoe.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Свинина</li>
 						<li>лук</li>
@@ -643,6 +669,7 @@
 
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Перец болгарский фаршированный</div>
+					<div class="img"><img src="img/perec.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>перец</li>
 						<li>морковь</li>
@@ -661,6 +688,7 @@
 
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Багет пшеничный, ржаной</div>
+					<div class="img"><img src="img/hleb.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Мука(пшеничная)
 						или ржаная)</li>
@@ -682,6 +710,7 @@
 			<div class="row">
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Напиток из свежезамороженных ягод, сухофруктов</div>
+					<div class="img"><img src="img/kampot.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>ягоды или сухофрукт</li>
 						<li>вода</li>
@@ -703,6 +732,7 @@
 			<div class="row">
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Суп «Уха»</div>
+					<div class="img"><img src="img/uha.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>рыбный бульйон</li>
 						<li>мясо рыбы ( треска или горуша )</li>
@@ -721,6 +751,7 @@
 
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Салат «Оливье»</div>
+					<div class="img"><img src="img/olive.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>огурец свежий</li>
 						<li>картофель</li>
@@ -741,6 +772,7 @@
 
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Салат «Мимоза»</div>
+					<div class="img"><img src="img/mimoza.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Консервированная сайра</li>
 						<li>сайра</li>
@@ -764,6 +796,7 @@
 			<div class="row">
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Картофельное пюре</div>
+					<div class="img"><img src="img/pyre.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Картофель</li>
 						<li>вода</li>
@@ -781,6 +814,7 @@
 
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Капуста тушеная</div>
+					<div class="img"><img src="img/kapysta.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Капуста</li>
 						<li>масло растительное</li>
@@ -796,6 +830,7 @@
 
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Сосиски, сардельки</div>
+					<div class="img"><img src="img/sosiski.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Сосиски или сардельки</li>
 						<li>вода</li>
@@ -813,6 +848,7 @@
 			<div class="row">
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">«Шницель» рыбный, рубленный с овощами</div>
+					<div class="img"><img src="img/riba.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>горбуша или теска</li>
 						<li>лук</li>
@@ -830,6 +866,7 @@
 
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">«Соте» из овощей</div>
+					<div class="img"><img src="img/sote.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>перец</li>
 						<li>морковь</li>
@@ -849,6 +886,7 @@
 
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Багет пшеничный, ржаной</div>
+					<div class="img"><img src="img/hleb.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Мука(пшеничная 
 						или ржаная)</li>
@@ -870,6 +908,7 @@
 			<div class="row">
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Напиток из свежезамороженных ягод, сухофруктов</div>
+					<div class="img"><img src="img/kampot.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>ягоды или сухофрукт</li>
 						<li>вода</li>
@@ -891,6 +930,7 @@
 			<div class="row">
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Суп-пюре из шампиньонов</div>
+					<div class="img"><img src="img/SypPyre.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>шампиньйоны</li>
 						<li>сливки</li>
@@ -906,6 +946,7 @@
 				</div>
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">«Винегрет»</div>
+					<div class="img"><img src="img/venegret.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Свёкла</li>
 						<li>картофель</li>
@@ -925,6 +966,7 @@
 				</div>
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Салат «Находка»</div>
+					<div class="img"><img src="img/pekinskaya.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>пеинская капуста</li>
 						<li>кукуруза</li>
@@ -947,6 +989,7 @@
 			<div class="row">
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Макароны</div>
+					<div class="img"><img src="img/makaroni.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>макароны</li>
 						<li>вода</li>
@@ -963,6 +1006,7 @@
 
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Картофель отварной с зеленью</div>
+					<div class="img"><img src="img/kartofel.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Картофель</li>
 						<li>вода</li>
@@ -978,10 +1022,13 @@
 				</div>
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">«Бефстроганов»</div>
+					<div class="img"><img src="img/kyrPechen.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Говядина</li>
 						<li>лук</li>
-						<li>масло ( сливочное,растительное)</li>
+						<li>масло
+						(сливочное,растительное)
+					</li>
 						<li>мука</li>
 						<li>томат</li>
 						<li>метана</li>
@@ -1000,6 +1047,7 @@
 			<div class="row">
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Печень куриная с грибами в сливочном соусе</div>
+					<div class="img"><img src="img/grib.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>печень</li>
 						<li>лук</li>
@@ -1018,6 +1066,7 @@
 				</div>
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">«Биточки» картофельные с грибами </div>
+					<div class="img"><img src="img/dich.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>картофель</li>
 						<li>грибы</li>
@@ -1035,6 +1084,7 @@
 				</div>
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Багет пшеничный, ржаной</div>
+					<div class="img"><img src="img/hleb.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>Мука(пшеничная 
 						или ржаная)</li>
@@ -1056,6 +1106,7 @@
 			<div class="row">
 				<div class = 'Menu__MineMenu__items col-md-3 col-sm-5 col-xs-12'>
 					<div class="Menu__MineMenu__items__title">Напиток из свежезамороженных ягод, сухофруктов</div>
+					<div class="img"><img src="img/kampot.png" alt=""></div>
 					<ul class = 'Menu__MineMenu__items__ingredients'>
 						<li>ягоды или сухофрукт</li>
 						<li>вода</li>
